# silicon-opengl

./: CMakeLists.txt
include/silicon/: application.hpp  mesh.hpp  model.hpp  program.hpp  shader.hpp  texture.hpp  utilities.hpp  vertex.hpp
include/silicon/meshes/: cube.hpp
res/: fragment_shader.glsl  vertex_shader.glsl
src/: application.cpp  main.cpp  mesh.cpp  model.cpp  program.cpp  shader.cpp  texture.cpp  utilities.cpp
